    series file:
    - xcb-Fix-drag-and-drop-to-Emacs.patch
    - xcb-Fix-drag-and-drop-to-applications-like-Emacs-and.patch
  * Add revert-automatic-code-attribution-docs.patch which reverts a
    commit from upstream because it requires a tool introduced in a Qt
    Tools version (5.8) that Ubuntu skipped.
  * Add arm64 to the arches GLES is built on in qtbase5-private-
    dev.install.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Thu, 08 Jun 2017 13:48:28 +0300

qtbase-opensource-src (5.9.0+dfsg-1) experimental; urgency=medium

  * Team upload.

  [ Simon Quigley ]
  * New upstream final release.
  * Modify debian/watch to automatically pick up new development *and* final
    releases.

  [ Dmitry Shachnev ]
  * Update symbols files from the current build logs.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Tue, 06 Jun 2017 14:49:38 -0500

qtbase-opensource-src (5.9.0~beta.3+dfsg-1) experimental; urgency=medium

  * New upstream beta release.
  * Update qmake-qt5 manpage (closes: #859968).
  * Update debian/libqt5core5a.symbols for arm64.
  * Update debian/copyright.
  * Update debian/libqt5gui5.symbols from the current build log.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 07 May 2017 20:00:51 +0300

qtbase-opensource-src (5.9.0~beta+dfsg-1) experimental; urgency=medium

  * Update debian/watch to track experimental releases.
  * New upstream beta release.
  * Drop all patches which were backported from upstream.
  * Refresh other patches.
  * Bump dpkg-dev build-dependency to 1.17.14, for build profiles.
  * Disable debug logging in /etc/xdg/QtProject/qtlogging.ini (closes:
    #805399).
  * Update debian/copyright using debian/scripts/update-copyright.
  * Update install files for the new release.
  * Update symbols files from amd64 and i386 build logs.
  * Bump qtbase-abi version to 5-9-0.

  [ Timo Jyrinki ]
  * Drop support for twin gles packages.
  * Drop Ubuntu specific patches and patches that will be in upstream 5.9.