@@ -26,6 +26,7 @@ qtbase-opensource-src (5.9.0+dfsg-1ubuntu1) UNRELEASED; urgency=medium
     Tools version (5.8) that Ubuntu skipped.
   * Add arm64 to the arches GLES is built on in qtbase5-private-
     dev.install.
+  * Simplify disabling of gold linker in debian/rules.
 
  -- Simon Quigley <tsimonq2@ubuntu.com>  Thu, 08 Jun 2017 13:48:28 +0300
 
